--- a/templates/index.html
+++ b/templates/index.html
@@ -20,9 +20,7 @@
         Your LitRPG Companion: Discover, Save, and Review the Best Books in Progression Fantasy!
       </p>
       <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-        <button type="button" class="btn btn-signup btn-lg px-4 me-md-2">
-          Register
-        </button>
+        <button type="button" class="btn btn-signup btn-lg px-4 me-md-2">Register</button>
       </div>
     </div>
   </div>
