--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,14 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'favicon/site.webmanifest' %}">
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon/favicon.ico' %}">
+
+
 
 </head>
 
@@ -47,14 +55,16 @@
                 aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-    
+
             <div class="collapse navbar-collapse" id="navbarsExample04">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == home_url %}active{% endif %}" href="{% url 'home' %}">Home</a>
+                        <a class="nav-link {% if request.path == home_url %}active{% endif %}"
+                            href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == 'review_list' %}active{% endif %}" href="{% url 'review_list' %}">Reviews</a>
+                        <a class="nav-link {% if request.path == 'review_list' %}active{% endif %}"
+                            href="{% url 'review_list' %}">Reviews</a>
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item dropdown">
@@ -64,16 +74,20 @@
                             <li><a class="dropdown-item" href="{% url 'add_book' %}">Add Book</a></li>
                             <li><a class="dropdown-item" href="{% url 'add_review' %}">Add Review</a></li>
                             <li><a class="dropdown-item" href="{% url 'tbr_list' %}">TBR List</a></li>
-                            <li><hr class="dropdown-divider"></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
                             <li><a class="dropdown-item" href="{% url 'account_logout' %}">Log Out</a></li>
                         </ul>
                     </li>
                     {% else %}
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == signup_url %}active{% endif %}" href="{% url 'account_signup' %}">Register</a>
+                        <a class="nav-link {% if request.path == signup_url %}active{% endif %}"
+                            href="{% url 'account_signup' %}">Register</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == login_url %}active{% endif %}" href="{% url 'account_login' %}">Login</a>
+                        <a class="nav-link {% if request.path == login_url %}active{% endif %}"
+                            href="{% url 'account_login' %}">Login</a>
                     </li>
                     {% endif %}
                 </ul>
@@ -87,7 +101,7 @@
             </div>
         </div>
     </nav>
-    
+
     <!-- displaying Django messages -->
 
     <div class="container">
@@ -113,7 +127,7 @@
     </main>
 
     <div class="b-example-divider"></div>
-    
+
     <!-- Footer -->
     <footer class="footer mt-auto py-3 main-bg">
         <p class="m-0 text-center">
