Add: Meta tags to base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,10 @@
 <head>
     <title>LitRPG Library</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description"
+        content="LitRPG Library is the ultimate destination for discovering and reviewing LitRPG books. Join our community of avid readers and authors today!">
+    <meta name="keywords" content="LitRPG, Books, Reviews, Library, GameLit, Fantasy, Progression Fantasy, Sci-Fi, Book Reviews">
+
 
     <!-- Google Fonts CSS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
