--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,12 +17,12 @@
 body {
     background-color: var(--bg-color);
     padding-top: 70px;
-    color:var(--text-color)
+    color: var(--text-color)
 }
 
-h1, h2, h3 {
-    color:var(--secondary-color);
-    font-family: 'Cabin', sans-serif;
+h1 {
+    color: var(--secondary-color);
+    font-family: 'Alef', sans-serif;
     letter-spacing: 1px;
 }
 
@@ -50,6 +50,7 @@ p {
     color: var(--secondary-color);
     letter-spacing: 1px;
     font-weight: 400;
+    font-size:large;
     transition: color 0.3s ease;
 }
 
@@ -88,6 +89,8 @@ p {
 
 .navbar-dark .navbar-toggler-icon {
     background-image: url("/static/images/menu.svg");
+    width: 100px;
+    height:auto;
 }
 
 .navbar-dark .navbar-toggler:hover {
@@ -107,7 +110,7 @@ p {
     transition: all 0.3s ease;
     position: relative;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    background-color:var(--accent-color);
+    background-color: var(--accent-color);
 }
 
 /* Hero */
@@ -116,6 +119,12 @@ p {
     width: 75%;
     margin: 20px auto;
     border: 2px solid var(--text-color);
+}
+
+.genres-img {
+    max-height: 300px;
+    max-width: 100%;
+    object-fit: contain;
 }
 
 /* Bootstrap divider */
@@ -127,11 +136,11 @@ p {
     border: solid rgba(0, 0, 0, .15);
     border-width: 1px 0;
     box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-  }
+}
 
 /* Review Details Masthead */
 
-  .masthead {
+.masthead {
     margin-top: 10px;
     border-radius: 30px;
     overflow: hidden;
@@ -172,9 +181,11 @@ p {
 
 .review-content {
     color: var(--text-color);
-    font-size: 1rem; /* Optional: Adjust font size */
-    line-height: 1.6; /* Optional: Improve readability with better line spacing */
-  }
+    font-size: 1rem;
+    /* Optional: Adjust font size */
+    line-height: 1.6;
+    /* Optional: Improve readability with better line spacing */
+}
 
 /* Cards */
 
@@ -188,41 +199,35 @@ p {
 }
 
 .card-text {
-    color:var(--text-color);
+    color: var(--text-color);
 }
 
 .index-card {
     border: 2px solid var(--secondary-color);
-    /* Border Color */
     border-radius: 10px;
-    /* Rounded Corners */
     margin: 20px auto;
-    /* Margin Around Card */
     padding: 20px;
-    /* Padding Inside the Card */
     background-color: #292a33;
-    /* Card Background */
     transition: all 0.3s ease;
-    /* Smooth Transition */
     text-align: left;
-    /* Center Text in Cards */
+}
+
+.intro-cards p{
+    font-size: large;
+    text-align: left;
 }
 
 .review-card {
     border: 2px solid var(--secondary-color);
-    /* Border Color */
     border-radius: 10px;
-    /* Rounded Corners */
     background-color: #292a33;
-    /* Card Background */
     transition: all 0.3s ease;
-    /* Smooth Transition */
     text-align: left;
-    /* Center Text in Cards */
+
 }
 
-.review-card  a {
-    color:#e2e5f6;
+.review-card a {
+    color: #e2e5f6;
 }
 
 .card-img-top {
@@ -240,19 +245,26 @@ p {
 
 /* Modal */
 .modal-content {
-    background-color: var(--bg-color); /* Match background color of the page */
+    background-color: var(--bg-color);
+    /* Match background color of the page */
     border: none;
-    border-radius: 10px; /* Rounded corners */
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5); /* Add a shadow for depth */
-    color: var(--text-color); /* Match text color */
+    border-radius: 10px;
+    /* Rounded corners */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+    /* Add a shadow for depth */
+    color: var(--text-color);
+    /* Match text color */
 }
 
 .modal-header {
-    background-color: var(--accent-color); /* Accent background for header */
-    color: var(--bg-color); /* Contrasting text color */
+    background-color: var(--accent-color);
+    /* Accent background for header */
+    color: var(--bg-color);
+    /* Contrasting text color */
     font-family: 'Cabin', sans-serif;
     font-weight: bold;
-    border-bottom: 2px solid var(--secondary-color); /* Subtle border */
+    border-bottom: 2px solid var(--secondary-color);
+    /* Subtle border */
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
 }
@@ -264,13 +276,15 @@ p {
 
 .modal-body {
     font-family: 'Raleway', sans-serif;
-    color: var(--text-color); /* Match the page text color */
+    color: var(--text-color);
+    /* Match the page text color */
     background-color: transparent;
 }
 
 .modal-footer {
-    background-color: var(--bg-color); 
-    border-top: 1px solid var(--secondary-color); /* Divider */
+    background-color: var(--bg-color);
+    border-top: 1px solid var(--secondary-color);
+    /* Divider */
     display: flex;
     justify-content: flex-end;
 }
@@ -305,7 +319,7 @@ p {
 
 /* Modal Close Button */
 .modal-header .btn-close {
-    background-color:var(--secondary-color);
+    background-color: var(--secondary-color);
     color: var(--text-color);
     border: none;
     opacity: 0.8;
@@ -355,7 +369,7 @@ footer .social-links li:active svg path {
 
 /* Buttons */
 
-    /* Register */
+/* Register */
 .btn-signup,
 .btn-edit {
     background-color: var(--highlight-color);
@@ -369,12 +383,27 @@ footer .social-links li:active svg path {
     background-color: var(--secondary-color);
     color: var(--bg-color);
 }
-    /* Pagination */
+
+.btn-login {
+    color: var(--bg-color);
+    border: 1px solid var(--accent-color);
+    background: var(--secondary-color);
+    font-weight: bold;
+}
+
+.btn-login:hover,
+.btn-login:active {
+    background-color: var(--accent-color);
+    border: 1px solid var(--accent-color);
+    color: var(--bg-color);
+}
+
+/* Pagination */
 
 .btn-page {
     color: var(--bg-color);
     border: 1px solid var(--accent-color);
-    background: var(--secondary-color);
+    background-color: var(--secondary-color);
     font-weight: bold;
 }
 
@@ -427,10 +456,10 @@ footer .social-links li:active svg path {
     color: var(--bg-color);
 }
 
-    /* add book btn */
+/* add book btn */
 .btn-book-add {
     background-color: var(--accent-color);
-    margin:5px;
+    margin: 5px;
     border: 1px solid var(--secondary-color);
     color: var(--bg-color);
     font-weight: 700;
@@ -492,7 +521,3 @@ footer .social-links li:active svg path {
         color: var(--highlight-color);
     }
 }
-
-
-
-
