--- a/templates/base.html
+++ b/templates/base.html
@@ -9,12 +9,21 @@
 <html lang="en">
 
 <head>
-    <title>LitRPG Library</title>
+    <!-- Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description"
         content="LitRPG Library is the ultimate destination for discovering and reviewing LitRPG books. Join our community of avid readers and authors today!">
-    <meta name="keywords" content="LitRPG, Books, Reviews, Library, GameLit, Fantasy, Progression Fantasy, Sci-Fi, Book Reviews">
+    <meta name="keywords"
+        content="LitRPG, Books, Reviews, Library, GameLit, Fantasy, Progression Fantasy, Sci-Fi, Book Reviews">
 
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}">
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon/favicon.ico' %}">
+
+    <!-- Title -->
+    <title>LitRPG Library</title>
 
     <!-- Google Fonts CSS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -36,12 +45,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
-    <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}">
-    <link rel="manifest" href="{% static 'favicon/site.webmanifest' %}">
-    <link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon/favicon.ico' %}">
+
 
 
 
@@ -52,50 +56,49 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-md navbar-dark llnav">
         <div class="container-fluid">
+            <!-- Logo -->
             <a class="navbar-brand" href="{% url 'home' %}">
                 <img src="{% static 'images/logo.webp' %}" alt="LitRPG Library Logo" width="190" height="60">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04"
-                aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+    
+            <!-- Toggler Button for Mobile View -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
+    
+            <!-- Collapsible Navbar Links -->
             <div class="collapse navbar-collapse" id="navbarsExample04">
+                <!-- Navigation Links -->
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == home_url %}active{% endif %}"
-                            href="{% url 'home' %}">Home</a>
+                        <a class="nav-link {% if request.resolver_match.url_name == 'home' %}active{% endif %}" href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == 'review_list' %}active{% endif %}"
-                            href="{% url 'review_list' %}">Reviews</a>
+                        <a class="nav-link {% if request.resolver_match.url_name == 'review_list' %}active{% endif %}" href="{% url 'review_list' %}">Reviews</a>
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">User Menu</a>
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">User Menu</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="{% url 'add_book' %}">Add Book</a></li>
                             <li><a class="dropdown-item" href="{% url 'add_review' %}">Add Review</a></li>
                             <li><a class="dropdown-item" href="{% url 'tbr_list' %}">TBR List</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
+                            <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="{% url 'account_logout' %}">Log Out</a></li>
                         </ul>
                     </li>
                     {% else %}
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == signup_url %}active{% endif %}"
-                            href="{% url 'account_signup' %}">Register</a>
+                        <a class="nav-link {% if request.resolver_match.url_name == 'account_signup' %}active{% endif %}" href="{% url 'account_signup' %}">Register</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == login_url %}active{% endif %}"
-                            href="{% url 'account_login' %}">Login</a>
+                        <a class="nav-link {% if request.resolver_match.url_name == 'account_login' %}active{% endif %}" href="{% url 'account_login' %}">Login</a>
                     </li>
                     {% endif %}
                 </ul>
-                <span class="navbar-text m-2">
+    
+                <!-- Login Status -->
+                <span class="navbar-text ms-auto text-nowrap">
                     {% if user.is_authenticated %}
                     Logged in as {{ user }}
                     {% else %}
@@ -105,6 +108,7 @@
             </div>
         </div>
     </nav>
+    
 
     <!-- displaying Django messages -->
 
@@ -133,11 +137,22 @@
     <div class="b-example-divider"></div>
 
     <!-- Footer -->
-    <footer class="footer mt-auto py-3 main-bg">
-        <p class="m-0 text-center">
-            Copyright 2024 Laura Hall
-        </p>
-        <div class="social-border">
+    <div class="container">
+        <footer class="py-3 my-4">
+          <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item"><a href="{% url 'home' %}" class="nav-link px-2 text-body-secondary">Home</a></li>
+            <li class="nav-item"><a href="{% url 'review_list' %}" class="nav-link px-2 text-body-secondary">Reviews</a></li>
+            {% if user.is_authenticated %}
+            <li class="nav-item"><a href="{% url 'add_book' %}" class="nav-link px-2 text-body-secondary">Add Book</a></li>
+            <li class="nav-item"><a href="{% url 'add_review' %}" class="nav-link px-2 text-body-secondary">Add Review</a></li>
+            <li class="nav-item"><a href="{% url 'tbr_list' %}" class="nav-link px-2 text-body-secondary">TBR List</a></li>
+            {% else %}
+            <li class="nav-item"><a href="{% url 'account_signup' %}" class="nav-link px-2 text-body-secondary">Register</a></li>
+            <li class="nav-item"><a href="{% url 'account_login' %}" class="nav-link px-2 text-body-secondary">Login</a></li>
+            {%endif%}
+          </ul>
+          <p class="text-center text-body-secondary">&copy; 2024 Laura Hall</p>
+          <div class="social-border">
             <ul class="social-links list-inline text-center">
                 <li class="list-inline-item">
                     <a target="_blank" href="https://linkedin.com/in/laura-hall-dev">
@@ -159,8 +174,9 @@
                 </li>
             </ul>
         </div>
-    </footer>
-
+        </footer>
+      </div>
+      <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
     </script>
