--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,9 @@
   <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
     <div class="col-12 col-sm-8 col-md-12 col-lg-6">
       <img src="{% static 'images/hero.gif' %}" class="d-block mx-auto img-fluid" alt="LitRPG Library Logo" width="700" height="500">
+      <div class="col-12 col-sm-8 col-md-12 col-lg-6 text-center">
+      </div>
+  
     </div>
     <div class="col-lg-6">
       <h1 class="display-5 fw-bold lh-1 mb-3">LitRPG Library</h1>
@@ -21,13 +24,12 @@
   </div>
 </div>
 
-<hr class="solid hero-break" />
+<hr class="solid hero-break">
 
-<!-- Intro Cards -->
 <div class="container py-4 intro-cards">
-  <div class="row justify-content-center g-4"> <!-- Add g-4 for spacing -->
+  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 justify-content-center g-4 mb-4">
     <!-- Card 1 -->
-    <div class="col-12 col-sm-6 col-md-4 col-lg-3"> <!-- Stack on small screens -->
+    <div class="col">
       <div class="card index-card h-100">
         <div class="card-body text-center">
           <h5 class="card-title d-flex justify-content-between align-items-center">
@@ -38,7 +40,7 @@
       </div>
     </div>
     <!-- Card 2 -->
-    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+    <div class="col">
       <div class="card index-card h-100">
         <div class="card-body text-center">
           <h5 class="card-title d-flex justify-content-between align-items-center">
@@ -49,7 +51,7 @@
       </div>
     </div>
     <!-- Card 3 -->
-    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+    <div class="col">
       <div class="card index-card h-100">
         <div class="card-body text-center">
           <h5 class="card-title d-flex justify-content-between align-items-center">
@@ -60,7 +62,7 @@
       </div>
     </div>
     <!-- Card 4 -->
-    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+    <div class="col">
       <div class="card index-card h-100">
         <div class="card-body text-center">
           <h5 class="card-title d-flex justify-content-between align-items-center">
@@ -74,7 +76,9 @@
 </div>
 
 
-<hr class="solid hero-break" />
+
+
+<hr class="solid hero-break">
 
 <!-- LitRPG Description Section -->
 <section class="litrpg-description">
@@ -117,7 +121,7 @@
   </div>
 </section>
 
-<hr class="solid hero-break" />
+<hr class="solid hero-break">
 
 <!-- Featured Reviews Section -->
 <div class="container mt-5">
