--- a/templates/index.html
+++ b/templates/index.html
@@ -5,10 +5,10 @@
 {% block content %}
 
 <!-- Hero Section -->
-<div class="container col-xxl-8 px-4 py-5">
+<div class="container col-xxl-8 px-4">
   <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
     <div class="col-12 col-sm-8 col-md-12 col-lg-6">
-      <img src="{% static 'images/hero.gif' %}" class="d-block mx-auto img-fluid" alt="LitRPG Library Logo" width="700" height="500">
+      <img src="{% static 'images/hero.gif' %}" class="d-block mx-auto img-fluid" id="gif-toggle" alt="LitRPG Library Logo" width="700" height="500">
       <div class="col-12 col-sm-8 col-md-12 col-lg-6 text-center">
       </div>
   
@@ -155,4 +155,9 @@
   <a href="{% url 'account_signup' %}" class="btn btn-signup btn-lg">Sign Up</a>
 </div>
 
+{% endblock %}
+
+
+{% block extras %}
+<script src="{% static 'js/pause.js' %}"></script>
 {% endblock %}
