--- a/review/templates/review/review_detail.html
+++ b/review/templates/review/review_detail.html
@@ -28,9 +28,9 @@
     <!-- Placeholder Image or Book Cover -->
     <div class="col-md-3 mt-3">
       {% if review.book.book_cover %}
-        <img src="{{ review.book.book_cover.url }}" class="img-fluid rounded" alt="{{ review.title }}">
+      <img src="{{ review.book.book_cover.url }}" class="img-fluid rounded" alt="{{ review.title }}">
       {% else %}
-        <img src="{% static 'images/default.jpg' %}" class="img-fluid rounded" alt="Placeholder">
+      <img src="{% static 'images/default.jpg' %}" class="img-fluid rounded" alt="Placeholder">
       {% endif %}
     </div>
     <!-- Review Content -->
@@ -38,34 +38,36 @@
       <div class="card mb-4 mt-3">
         <div class="card-body">
           {% if user.is_authenticated %}
-            <div class="stars">
-              <span><strong>Rating:</strong></span>
-              {% for i in "12345" %}
-                {% if forloop.counter <= review.rating %}
-                  <i class="fas fa-star text-warning"></i> <!-- Filled star -->
-                {% else %}
-                  <i class="far fa-star text-warning"></i> <!-- Empty star -->
-                {% endif %}
-              {% endfor %}
-            </div>
-            <!-- Add Book Button -->
-            <form action="{% url 'add_to_read_list' book.id %}" method="post">
-              {% csrf_token %}
-              <button type="submit" class="btn btn-book-add">Add Book</button>
-            </form>
+          <div class="stars">
+            <span><strong>Rating:</strong></span>
+            {% for i in "12345" %}
+            {% if forloop.counter <= review.rating %}
+            <i class="fas fa-star text-warning"></i> <!-- Filled star -->
+            {% else %}
+            <i class="far fa-star text-warning"></i> <!-- Empty star -->
+            {% endif %}
+            {% endfor %}
+          </div>
+          <!-- Add Book Button -->
+          <form action="{% url 'add_to_read_list' book.id %}" method="post">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-book-add">Add Book</button>
+          </form>
           {% endif %}
           <hr>
           <!-- Review Content -->
           <p class="mt-3">{{ review.content | safe }}</p>
           {% if user == review.user %}
-            <a href="{% url 'review_edit' slug=review.slug %}" class="btn btn-edit">Edit</a>
-            <!-- Delete form -->
-            <form method="post" action="{% url 'review_delete' slug=review.slug %}" style="display: inline" id="reviewDeleteForm">
-              {% csrf_token %}
-              <button type="button" class="btn btn-review-delete" data-slug="{{ review.slug }}" data-bs-toggle="modal" data-bs-target="#reviewDeleteModal">
-                Delete
-              </button>
-            </form>
+          <a href="{% url 'review_edit' slug=review.slug %}" class="btn btn-edit">Edit</a>
+          <!-- Delete form -->
+          <form method="post" action="{% url 'review_delete' slug=review.slug %}" style="display: inline"
+            id="reviewDeleteForm">
+            {% csrf_token %}
+            <button type="button" class="btn btn-review-delete" data-slug="{{ review.slug }}" data-bs-toggle="modal"
+              data-bs-target="#reviewDeleteModal">
+              Delete
+            </button>
+          </form>
           {% endif %}
         </div>
       </div>
@@ -73,7 +75,8 @@
   </div>
 
   <!-- Delete Confirmation Modal for Review -->
-  <div class="modal fade" id="reviewDeleteModal" tabindex="-1" aria-labelledby="reviewDeleteModalLabel" aria-hidden="true">
+  <div class="modal fade" id="reviewDeleteModal" tabindex="-1" aria-labelledby="reviewDeleteModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -107,23 +110,26 @@
       <h3>Comments:</h3>
       <div class="card-body">
         {% for comment in comments %}
-          <div class="p-2 comments {% if not comment.approved and comment.author == user %}faded{% elif not comment.approved %}d-none{% endif %}">
-            <p>
-              <strong>{{ comment.user }}</strong> 
-              <span>{{ comment.created_on }}</span> wrote:
-            </p>
-            <div id="comment{{ comment.id }}">
-              {{ comment.content | linebreaks }}
-            </div>
-            <p>Rating: {{ comment.rating }} out of 5.</p>
-            {% if not comment.approved and comment.user == user %}
-              <p class="approval">This comment is awaiting approval</p>
-            {% endif %}
-            {% if user.is_authenticated and comment.user == user %}
-              <button class="btn btn-edit" data-slug="{{ review.slug }}" comment_id="{{ comment.id }}">Edit</button>
-              <button class="btn btn-delete" data-slug="{{ review.slug }}" comment_id="{{ comment.id }}">Delete</button>
-            {% endif %}
+        <div
+          class="p-2 comments {% if not comment.approved and comment.author == user %}faded{% elif not comment.approved %}d-none{% endif %}">
+          <p>
+            <strong>{{ comment.user }}</strong>
+            <span>{{ comment.created_on }}</span> wrote:
+          </p>
+          <div id="comment{{ comment.id }}">
+            {{ comment.content | linebreaks }}
           </div>
+          {% if comment.rating %}
+          <p>Rating: {{ comment.rating }} out of 5.</p>
+          {% endif %}
+          {% if not comment.approved and comment.user == user %}
+          <p class="approval">This comment is awaiting approval</p>
+          {% endif %}
+          {% if user.is_authenticated and comment.user == user %}
+          <button class="btn btn-edit" data-slug="{{ review.slug }}" comment_id="{{ comment.id }}">Edit</button>
+          <button class="btn btn-delete" data-slug="{{ review.slug }}" comment_id="{{ comment.id }}">Delete</button>
+          {% endif %}
+        </div>
         {% endfor %}
       </div>
     </div>
@@ -132,15 +138,15 @@
     <div class="col-md-4 card mb-4 mt-3">
       <div class="card-body">
         {% if user.is_authenticated %}
-          <h3>Leave a comment:</h3>
-          <p>Posting as: {{ user.username }}</p>
-          <form id="commentForm" method="post">
-            {{ comment_form | crispy }} 
-            {% csrf_token %}
-            <button id="submitButton" type="submit" class="btn btn-edit btn-lg">Submit</button>
-          </form>
+        <h3>Leave a comment:</h3>
+        <p>Posting as: {{ user.username }}</p>
+        <form id="commentForm" method="post">
+          {{ comment_form | crispy }}
+          {% csrf_token %}
+          <button id="submitButton" type="submit" class="btn btn-edit btn-lg">Submit</button>
+        </form>
         {% else %}
-          <p>Log in to leave a comment</p>
+        <p>Log in to leave a comment</p>
         {% endif %}
       </div>
     </div>
