--- a/static/css/style.css
+++ b/static/css/style.css
@@ -399,6 +399,7 @@ footer .social-links li:active svg path {
 
 /* Register */
 .btn-signup,
+.btn-logout,
 .btn-edit {
     background-color: var(--highlight-color);
     color: var(--bg-color);
@@ -407,23 +408,28 @@ footer .social-links li:active svg path {
 }
 
 .btn-signup:hover,
-.btn-signup:active {
-    background-color: var(--secondary-color);
-    color: var(--bg-color);
+.btn-signup:active,
+.btn-logout:hover,
+.btn-logout:active {
+    background-color: var(--accent-color);
+    color: var(--text-color);
 }
 
-.btn-login {
+.btn-login,
+.btn-tbrlist {
     color: var(--bg-color);
     border: 1px solid var(--accent-color);
-    background: var(--secondary-color);
+    background-color: var(--secondary-color);
     font-weight: bold;
 }
 
 .btn-login:hover,
-.btn-login:active {
+.btn-login:active,
+.btn-tbrlist:hover,
+.btn-tbrlist:active {
     background-color: var(--accent-color);
     border: 1px solid var(--accent-color);
-    color: var(--bg-color);
+    color: var(--text-color);
 }
 
 /* Read More */
