style: tbr_list html and styling updated

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,7 +17,8 @@
 body {
     background-color: var(--bg-color);
     padding-top: 110px;
-    color: var(--text-color)
+    color: var(--text-color);
+    font-size: large;
 }
 
 h1 {
@@ -349,6 +350,35 @@ p {
     background-color: var(--secondary-color);
     color: var(--bg-color);
     opacity: 1;
+}
+
+/* TBR Page */
+
+.tbr-card {
+    display: flex;
+    flex-direction: row;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+}
+
+.tbr-card img {
+    object-fit: cover;
+    width: 100%;
+    max-height: 200px;
+    border-right: 1px solid #ddd;
+}
+
+.tbr-card .card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.tbr-card .card-footer {
+    background-color: #f8f9fa;
+    border-top: 1px solid #ddd;
 }
 
 
