--- a/templates/socialaccount/login.html
+++ b/templates/socialaccount/login.html
@@ -1,21 +1,41 @@
-{% extends "socialaccount/base.html" %}
+{% extends "base.html" %}
+{% load static %}
 {% load i18n %}
 
 {% block head_title %}{% trans "Sign In" %}{% endblock head_title %}
 
 {% block content %}
-{% if process == "connect" %}
-<h1>{% blocktrans with provider.name as provider %}Connect {{ provider }}{% endblocktrans %}</h1>
-
-<p>{% blocktrans with provider.name as provider %}You are about to connect a new third party account from {{ provider }}.{% endblocktrans %}</p>
-{% else %}
-<h1>{% blocktrans with provider.name as provider %}Sign In Via {{ provider }}{% endblocktrans %}</h1>
-
-<p>{% blocktrans with provider.name as provider %}You are about to sign in using a third party account from {{ provider }}.{% endblocktrans %}</p>
-{% endif %}
-
-<form method="post">
-  {% csrf_token %}
-  <button type="submit">{% trans "Continue" %}</button>
-</form>
+<div class="container my-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-header text-center">
+                    {% if process == "connect" %}
+                        <h2>{% blocktrans with provider.name as provider %}Connect {{ provider }}{% endblocktrans %}</h2>
+                    {% else %}
+                        <h2>{% blocktrans with provider.name as provider %}Sign In Via {{ provider }}{% endblocktrans %}</h2>
+                    {% endif %}
+                </div>
+                <div class="card-body">
+                    {% if process == "connect" %}
+                        <p class="text-center">{% blocktrans with provider.name as provider %}You are about to connect a new third-party account from {{ provider }}.{% endblocktrans %}</p>
+                    {% else %}
+                        <p class="text-center">{% blocktrans with provider.name as provider %}You are about to sign in using a third-party account from {{ provider }}.{% endblocktrans %}</p>
+                    {% endif %}
+                    <form method="post" class="text-center mt-4">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-primary btn-lg">
+                          <i class="fab fa-google"></i>  {% trans "Continue" %}
+                        </button>
+                    </form>
+                </div>
+                <div class="card-footer text-center">
+                    <a href="{% url 'account_login' %}" class="btn btn-link">
+                        {% trans "Back to Sign In Options" %}
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock content %}
